--- a/prueba9.html
+++ b/prueba9.html
@@ -140,6 +140,7 @@
             border-radius: 10px;
             overflow: hidden;
             background: #0b0f14;
+            max-width: 750px;
         }
 
         .CodeMirror {
